--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   margin-top: -50px;
   z-index: calc(var(--x) + var(--y) + var(--z));
   clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
-  transition: filter 200ms, scale 100ms, left 200ms ease-in-out, top 200ms ease-in-out, z-index 200ms;
+  transition: filter 200ms ease-in-out, scale 100ms ease-in-out, left 200ms ease-in-out, top 200ms ease-in-out, z-index 200ms ease-in-out;
 }
 
 .cube:hover {
